--- a/roletaSorteio.html
+++ b/roletaSorteio.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="content-type" content="text/html; charset=windows-1252">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+  <link rel="stylesheet" href="roleta.css">
 </head>
 <body>
 
